<resources>
    <string name="app_name">My App Portfolio</string>
    
    <!-- Application Listing -->
    <string name="application_listing_title">My Nanodegree Apps!</string>
    <string name="application_listing_project_stock_hawk">Stock Hawk</string>
    <string name="application_listing_project_build_it_bigger">Build It Bigger</string>
    <string name="application_listing_project_make_your_app_material">Make Your App Material</string>
    <string name="application_listing_project_go_ubiquitous">Go Ubiguitous</string>
    <string name="application_listing_project_capstone">Capstone</string>
    <string name="application_listing_project_popular_movies">Popular Movies</string>
    <string name="application_listing_button_toast" formatted="false">This button will launch my %s app</string>




</resources>
