<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tinytinybites.myappportfolio.MainActivity">

    <!-- Header -->
    <TextView
        style="@style/ApplicationList.Header"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/application_listing_title"/>

    <!-- App Project Listings -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                style="@style/ApplicationList.ProjectButton"
                android:id="@+id/projectPopularMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:text="@string/application_listing_project_popular_movies"
                android:layout_marginTop="5dp"/>

            <TextView
                style="@style/ApplicationList.ProjectButton"
                android:id="@+id/projectStockHawk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:text="@string/application_listing_project_stock_hawk"
                android:layout_marginTop="5dp"/>

            <TextView
                style="@style/ApplicationList.ProjectButton"
                android:id="@+id/projectBuildItBigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:text="@string/application_listing_project_build_it_bigger"
                android:layout_marginTop="5dp"/>

            <TextView
                style="@style/ApplicationList.ProjectButton"
                android:id="@+id/projectMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:text="@string/application_listing_project_make_your_app_material"
                android:layout_marginTop="5dp"/>

            <TextView
                style="@style/ApplicationList.ProjectButton"
                android:id="@+id/projectGoUbiquitous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:text="@string/application_listing_project_go_ubiquitous"
                android:layout_marginTop="5dp"/>

            <TextView
                style="@style/ApplicationList.ProjectButton"
                android:id="@+id/projectCapstone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:text="@string/application_listing_project_capstone"
                android:layout_marginTop="5dp"/>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
